[package]
name = "cw20-base"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Coverage of cw20-base message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
mt = ["library", "sylvia/mt"]

[dependencies]
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20-allowances = { path = "../../interfaces/cw20-allowances" }
cw20-marketing = { path = "../../interfaces/cw20-marketing" }
cw20-minting = { path = "../../interfaces/cw20-minting" }
semver = { workspace = true }
sylvia = { path = "../../../sylvia" }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
cw-utils = { workspace = true }
sylvia = { path = "../../../sylvia", features = ["mt"] }
cw20-allowances = { path = "../../interfaces/cw20-allowances", features = [
    "mt",
] }
cw20-marketing = { path = "../../interfaces/cw20-marketing", features = ["mt"] }
cw20-minting = { path = "../../interfaces/cw20-minting", features = ["mt"] }
