[package]
name = "entry-points-overriding"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Example usage of sudo and entry point overriding."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
mt = ["library", "cw-multi-test", "anyhow"]

[dependencies]
anyhow = { workspace = true, optional = true }
cw-multi-test = { workspace = true, optional = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
serde = { workspace = true }
sylvia = { path = "../../../sylvia" }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
sylvia = { path = "../../../sylvia", features = ["mt"] }
