[package]
name = "entry-points-overriding"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Example usage of sudo and entry point overriding."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
mt = ["library", "sylvia/mt"]

[dependencies]
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
sylvia = { path = "../../../sylvia" }

[dev-dependencies]
sylvia = { path = "../../../sylvia", features = ["mt"] }
