[package]
name = "generic_iface_on_contract"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Generic interfaces implemented on non generic contract"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
mt = ["library", "sylvia/mt", "anyhow"]

[dependencies]
anyhow = { workspace = true, optional = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
sylvia = { path = "../../../sylvia" }
cw1 = { path = "../../interfaces/cw1" }
generic = { path = "../../interfaces/generic" }
custom-and-generic = { path = "../../interfaces/custom-and-generic" }

[dev-dependencies]
anyhow = { workspace = true }
sylvia = { path = "../../../sylvia", features = ["mt"] }
