[package]
name = "custom-and-generic"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Interface with custom msg and generic support."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[features]
mt = ["sylvia/mt"]

[dependencies]
sylvia = { workspace = true }

[dev-dependencies]
sylvia = { workspace = true, features = ["mt"] }
