[package]
name = "cw20-allowances"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Coverage of cw20-allowances message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[features]
mt = ["sylvia/mt"]

[dependencies]
sylvia = { workspace = true }
cw-utils = { workspace = true }

[dev-dependencies]
sylvia = { workspace = true, features = ["mt"] }
