[package]
name = "cw20-marketing"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Coverage of cw20-marketing message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[features]
mt = ["sylvia/mt"]

[dependencies]
sylvia = { path = "../../../sylvia" }

[dev-dependencies]
sylvia = { path = "../../../sylvia", features = ["mt"] }
