[package]
name = "cw20-minting"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Coverage of cw20-minting message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[features]
mt = ["sylvia/mt"]

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmwasm-schema = { workspace = true }
serde = { workspace = true }
sylvia = { path = "../../../sylvia" }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
