[package]
name = "cw20-minting"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Coverage of cw20-minting message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[features]
mt = ["sylvia/mt"]

[dependencies]
sylvia = { path = "../../../sylvia" }

[dev-dependencies]
anyhow = { workspace = true }
sylvia = { path = "../../../sylvia", features = ["mt"] }
